--- a/Views/Media/Index.cshtml
+++ b/Views/Media/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Media>
+﻿@model List<MediaFile>
 @{
     ViewData["Title"] = "Brand list";
     Layout = "~/Views/Shared/_Dashboard.cshtml";
