--- a/Views/Media/_FilePicker.cshtml
+++ b/Views/Media/_FilePicker.cshtml
@@ -1,4 +1,4 @@
-@model List<MediaFile>
+@* @model List<MediaFile> *@
 
 
 <div class="container">
@@ -15,14 +15,14 @@
                             <button type="button" class="btn-close"  onClick="closeModal()"></button>
                         </div>
                         <div class="custom-modal-body">
-                        @if (Model == null || !Model.Any())
+                        @if (Model.Files == null)
                         {
                                 <h2 class="text-center">No Content found.</h2>
                         }
                         else
                         {
                             <div class="grid-container my-2">
-                            @foreach (var file in Model)
+                            @foreach (var file in Model.Files)
                             {
                                 <div class="cards card rounded shadow-sm" onClick="selectImage('@file.filePath')">
                                     <img class="rounded" title="" src="@file.filePath" onError="(e)=> e.target.style.display = 'none'"/>
@@ -53,6 +53,7 @@
         if(productImage)
         {
            productImage.src = filePath;
+           document.getElementById("image").value = filePath;
         }
     }
 </script>
