--- a/Views/Product/Create.cshtml
+++ b/Views/Product/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model ProductDto
+@{
     Layout = "~/Views/Shared/_Dashboard.cshtml";
     ViewData["Title"] = "Index";
 }
@@ -12,85 +13,124 @@
     </div>
     <hr />
     <div class="row">
-        <div class="col-sm-8 d-flex flex-column gap-3">
-            <div class="form-group">
-                <label>Product Title:</label>
-                <input id="title" name="title" class="form-control" type="text" placeholder="Product Name" />
-            </div>
-            <div class="form-group">
-                <label>Product Description:</label>
-                <textarea id="description" name="description" rows="5" class="form-control" type="text"
-                    placeholder="Product Description" name="" id=""></textarea>
-            </div>
-            <div class="form-group row">
-                <div class="col-sm-6 d-flex align-items-center gap-3">
-                    <label>Price: </label>
-                    <input id="price" name="price" class="form-control" type="number" placeholder="Product Price" />
+            <div class="col-sm-8 d-flex flex-column gap-3">
+                <div class="form-group">
+                    <label>Product Title:</label>
+                    <input asp-for="Product.Title" id="title" class="form-control" type="text"
+                        placeholder="Product Name" />
                 </div>
-                <div class="col-sm-6 d-flex align-items-center gap-3">
-                    <label>Quantity: </label>
-                    <input id="quantity" name="quantity" class="form-control" type="number" placeholder="Product Quantity" />
+                <div class="form-group">
+                    <label>Product Description:</label>
+                    <textarea asp-for="Product.Description" id="description" rows="5" class="form-control" type="text"
+                        placeholder="Product Description" name="" id=""></textarea>
+                </div>
+                <div class="form-group row">
+                    <div class="col-sm-6 d-flex align-items-center gap-3">
+                        <label>Price: </label>
+                        <input asp-for="Product.Price" id="price" class="form-control" type="number"
+                            placeholder="Product Price" />
+                    </div>
+                    <div class="col-sm-6 d-flex align-items-center gap-3">
+                        <label>Quantity: </label>
+                        <input asp-for="Product.Quantity" id="quantity" class="form-control" type="number"
+                            placeholder="Product Quantity" />
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-sm-6 d-flex align-items-center gap-3">
+                        <label>Color: </label>
+                        <input asp-for="Product.Color" id="color" class="form-control" type="text"
+                            placeholder="Product Color" />
+                    </div>
+                    <div class="col-sm-6 d-flex align-items-center gap-3">
+                        <label>Size: </label>
+                        <input asp-for="Product.Size" id="size" class="form-control" type="text"
+                            placeholder="Product Size" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label>SKU:</label>
+                    <input id="sku" class="form-control" type="text"
+                        placeholder="SKU" />
+                </div>
+
+            </div>
+            <div class="col-sm-4 d-flex flex-column gap-3">
+                <div class="form-group">
+                    <label class="">Select Brands</label>
+                    <select asp-for="Product.BrandId" asp-items="Model.BrandOptions" name="brand" id="brand"
+                        class="form-control">
+                        <option value="">Select Brands</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label class="">Select Category</label>
+                    <select asp-for="Product.CategoryId" asp-items="Model.CategoryOptions" name="category" id="category"
+                        class="form-control">
+                        <option value="">Select Category</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label class="">Select Product Image</label>
+                    @* @await Html.PartialAsync("../Media/_FilePicker.cshtml") *@
+                    <partial name="../Media/_FilePicker.cshtml" />
+                    <input asp-for="Product.Image" id="image" class="form-control" type="text"
+                        placeholder="Image path" />
+                    <img id="productImage" src="" alt="Product Image" style="max-width: 200px;"
+                        onError="(e)=> e.target.style.display = 'none'" />
+
                 </div>
             </div>
-            <div class="form-group row">
-                <div class="col-sm-6 d-flex align-items-center gap-3">
-                    <label>Color: </label>
-                <input class="form-control" type="text" placeholder="Product Color" />
-                </div>
-                <div class="col-sm-6 d-flex align-items-center gap-3">
-                    <label>Size: </label>
-                <input class="form-control" type="text" placeholder="Product Size" />
-                </div>
+            <div class="col-12">
+                <button onclick="productSubmit()" class="btn btn-primary my-4">Create</button>
             </div>
-            
-        </div>
-        <div class="col-sm-4 d-flex flex-column gap-3">
-            <div class="form-group">
-                <label class="">Select Brands</label>
-                <select name="brand" id="brand" class="form-control">
-                    <option value="">Select Brands</option>
-                    <option value="1">Apple</option>
-                    <option value="2">Samsung</option>
-                    <option value="3">Dell</option>
-                    <option value="4">Asus</option>
-                    <option value="5">Lenovo</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label class="">Select Category</label>
-                <select name="category" id="category" class="form-control">
-                    <option value="">Select Category</option>
-                    <option value="1">Apple</option>
-                    <option value="2">Samsung</option>
-                    <option value="3">Dell</option>
-                    <option value="4">Asus</option>
-                    <option value="5">Lenovo</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label class="">Select Product Image</label>
-                @* @await Html.PartialAsync("../Media/_FilePicker.cshtml") *@
-                <partial name="../Media/_FilePicker.cshtml" />
-                <img id="productImage" src="" alt="Product Image" style="max-width: 200px;"  onError="(e)=> e.target.style.display = 'none'"/>
-            </div>
-        </div>
-        <div class="col-12">
-            <button onclick="productSubmit()" class="btn btn-primary my-4">Create</button>
-        </div>
     </div>
 </div>
 
 <script>
-    function productSubmit() {
+    async function productSubmit() {
         var title = document.getElementById("title").value;
         var brand = document.getElementById("brand").value;
         var category = document.getElementById("category").value;
+        var description = document.getElementById("description").value;
+        var image = document.getElementById("image").value;
+        var color = document.getElementById("color").value;
+        var size = document.getElementById("size").value;
+        var quantity = document.getElementById("quantity").value;
+        var price = document.getElementById("price").value;
+        var sku = document.getElementById("sku").value;
+
         if (title == "") {
             errorToast("Product title required!");
         } else if (brand == "") {
             errorToast("Please, Select a brand name!");
         } else if (category == "") {
             errorToast("Please, Select a category name!");
-        }
+        }else{
+
+            let data = {
+            "Title" : title,
+            "Description" : description,
+            "Image" : image,
+            "Color" : color,
+            "Size" : size,
+            "Quantity" : quantity,
+            "Price" :price,
+            "Sku" : sku,
+            "CategoryId" : parseInt(category),
+            "BrandId" : parseInt(brand),
+            "UserId" : 1
+            }
+
+            let res = await axios.post("http://localhost:5258/Product", data);
+            if(res.data.status === "success"){
+                successToast("Product created successfully!");
+            }else{
+                errorToast(res.message);
+            }
+    }
+    
+    
+    
     }
 </script>
