product list done

--- a/Views/Dashboard/_DashboardSidebar.cshtml
+++ b/Views/Dashboard/_DashboardSidebar.cshtml
@@ -46,7 +46,7 @@
         </li>
         <ul class="collapse nav ms-3" id="Products" data-bs-parent="#menu">
           <li class="nav-item">
-            <a asp-controller="Product" asp-action="Index" class="nav-link link-dark">
+            <a asp-controller="Product" asp-action="ProductList" class="nav-link link-dark">
               <span class="d-none d-md-inline">All Products</span>
             </a>
           </li>
