--- a/Views/Product/ProductList.cshtml
+++ b/Views/Product/ProductList.cshtml
@@ -4,55 +4,73 @@
     ViewData["Title"] = "ProductList";
 }
 
-<h1>@ViewData["Title"]</h1>
 
-<div>
-    @if(Model == null || !Model.Any()){
-       <h2 class="text-center">No User found.</h2>
-    }else{
-                <table class="table table-striped table-bordered">
-                    <thead>
-                        <tr>
-                            <th>Id</th>
-                            <th>Title</th>
-                            <th>Description</th>
-                            <th>Price</th>
-                            <th>Quantity</th>
-                            <th>Color</th>
-                            <th>Size</th>
-                            <th>Sku</th>
-                            <th>Category</th>
-                            <th>Brand</th>
-                            <th>User</th>
-                            <th>Image</th>
-                            <th>Create</th>
-                            <th>Update</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach(var product in Model){
-                        <tr>
-                            <td>@product.Id</td>
-                            <td>@product.Title</td>
-                            <td>@product.Description</td>
-                            <td>@product.Price</td>
-                            <td>@product.Quantity</td>
-                            <td>@product.Color</td>
-                            <td>@product.Size</td>
-                            <td>@product.Sku</td>
-                            <td>@product.CategoryName</td>
-                            <td>@product.BrandName</td>
-                            <td>@product.UserName</td>
-                            <td><img src="@product.Image" alt="@product.Title" width="100"></td>
-                            <td>@product.CreatedAt.ToString("dd/MMM/yy")</td>
-                            <td>@product.UpdatedAt.ToString("dd/MMM/yy")</td>
-                            <td><i class="bi bi-pencil-square"></i> <i class="bi bi-trash"></i></td>
+<div class="container">
+    <div class="row mt-1">
+        <div class="col-12 position-relative">
+            <h2 class=" text-center">@ViewData["Title"]</h2>
+            <a class="btn btn-success position-absolute top-0 start-0 mt-2 ms-2" asp-controller="Product" asp-action="Create">Add Product</a>
+        </div>
+    </div>
+    <hr/>
 
-                            @* <img class=" rounded" title="" src="" onError="(e)=> e.target.style.display = 'none'"/> *@
-                        </tr>
-                        }
-                    </tbody>
-            </table>
-            }
+    <div class="row">
+        <div class="col-12">
+        @if(Model == null || !Model.Any()){
+        <h2 class="text-center">No product found.</h2>
+        }else{
+                    <table class="table table-striped table-bordered">
+                        <thead>
+                            <tr>
+                                <th>Id</th>
+                                <th>Title</th>
+                                <th>Description</th>
+                                <th>Price</th>
+                                <th>Qty</th>
+                                <th>Color</th>
+                                <th>Size</th>
+                                <th>Sku</th>
+                                <th>Category</th>
+                                <th>Brand</th>
+                                <th>User</th>
+                                <th>Image</th>
+                                <th>Create</th>
+                                <th>Update</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach(var product in Model){
+                            <tr>
+                                <td>@product.Id</td>
+                                <td class="truncation">@product.Title</td>
+                                <td class="truncation">@product.Description</td>
+                                <td>@product.Price</td>
+                                <td>@product.Quantity</td>
+                                <td>@product.Color</td>
+                                <td>@product.Size</td>
+                                <td>@product.Sku</td>
+                                <td>@product.CategoryName</td>
+                                <td>@product.BrandName</td>
+                                <td>@product.UserName</td>
+                                <td><img src="@product.Image" alt="@product.Title" width="80"></td>
+                                <td>@product.CreatedAt.ToString("dd/MMM/yy")</td>
+                                <td>@product.UpdatedAt.ToString("dd/MMM/yy")</td>
+                                <td >
+                                <div class="d-flex flex-row gap-1">
+                                    <a class="nav-link" asp-controller="Product" asp-action="Edit" asp-route-id="@product.Id">
+                                    <i class="bi bi-pencil fs-5"></i>
+                                </a>
+                                <i onClick="alert(@product.Id)" class="bi bi-trash fs-5 text-danger"></i>
+                                </div>
+                            </td>
+
+                                @* <img class=" rounded" title="" src="" onError="(e)=> e.target.style.display = 'none'"/> *@
+                            </tr>
+                            }
+                        </tbody>
+                </table>
+                }
+    </div>
+    </div>
 </div>
