--- a/wwwroot/css/dashboard-style.css
+++ b/wwwroot/css/dashboard-style.css
@@ -43,7 +43,12 @@ scrollbar-width: none;
 }
 
 
-
+.truncation {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-width: 100px;
+}
 
 
 .grid-container{
